# pomotimer

./: .gitignore  Makefile  executavel  main  meson.build
data/: com.github.joaovitor123jv.pomotimer.appdata.xml.in  com.github.joaovitor123jv.pomotimer.desktop.in  com.gitlab.joaovitor123jv.pomotimer.appdata.xml.in  com.gitlab.joaovitor123jv.pomotimer.desktop.in  configuracoes.gschema.xml  gschemas.compiled  meson.build
po/: LINGUAS  POTFILES  com.github.joaovitor123jv.pomotimer.pot  com.gitlab.joaovitor123jv.pomotimer.pot  en.po  es.po  es.po~  meson.build  pt.po  pt.po~
src/: App.vala  Contador.vala  Contagem.vala  Contagem.vala~  Main.vala  Window.vala
